# gpt-realtime-whisper-live-transcript-redactor

./: .env.example  AGENTS.md  ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml
apps/web/: next.config.ts  package.json
apps/web/e2e/: record.spec.ts  upload.spec.ts
apps/web/public/: audio-worklet.js
apps/web/src/app/: layout.tsx  page.tsx
docs/: RELIABILITY.md  SECURITY.md  app-workflows.md  dev-workflows.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/completed/: initial-scaffold.md
docs/features/: audit-trail.md  custom-glossary.md  dashboard.md  exports.md  file-browser.md  metadata-extraction.md  realtime-transcription.md  redaction.md  session-capture.md  session-library.md
infra/railway/: README.md
scripts/: doctor.mjs
services/api/: main.py  pyproject.toml  requirements.txt
services/api/app/config/: settings.py
services/api/app/repo/: b2_client.py  b2_sessions.py  openai_realtime_client.py  openai_redactor.py
services/api/app/runtime/: exports.py  glossary.py  health.py  realtime.py  session_upload.py  sessions.py
services/api/app/service/: audio_decode.py  exports.py  glossary.py  realtime_session.py  redaction.py  redaction_detectors.py  sessions.py  upload.py
services/api/app/types/: __init__.py  exports.py  glossary.py  redaction.py  sessions.py  transcripts.py
services/api/tests/: test_audio_decode.py  test_b2_standards.py  test_error_handling.py  test_exports.py  test_health.py  test_realtime_session.py  test_redaction.py  test_sessions.py  test_structure.py  test_upload_conflict.py
(+25 files in other folders)
