[project]
name = "gpt-realtime-whisper-live-transcript-redactor-api"
version = "0.1.0"
# Python 3.13 removed the stdlib `audioop` module, which is used by
# `app/service/audio_decode.py` for WAV resampling, downmixing, and
# bit-width promotion. v1 pins below 3.13 while the deprecation
# replacement is tracked in `docs/exec-plans/tech-debt-tracker.md`.
requires-python = ">=3.11,<3.13"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "T20",  # flake8-print (no bare print())
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function call in default arg (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
